# image-recreation

./: .gitignore  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
app/: GP.py  Individual.py  app.ipynb  constant.py  streamlit.py
app/figures/: data_cross.csv
gif/: create_graph.py
